# exercise

./: README.md  docker-compose.yml  package-lock.json  pyproject.toml  sample.env
python-react-project/: Dockerfile
python-react-project/backend/: pyproject.toml  start.sh
python-react-project/backend/app/: main.py  websocket_server.py
python-react-project/backend/tests/: test_websocket.py
python-react-project/frontend/src/components/: HelloWorld.tsx
sample.vscode/: launch.json  settings.json
