[tool.poetry]
name = "python-poetry-project"
version = "0.1.0"
description = ""
authors = ["ShapeSh1fta <alonfux@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
gunicorn = "^23.0.0"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
websockets = "^12.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
pika = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
